--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -20,6 +20,9 @@ body {
     overflow-x: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;   /* Firefox */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
