--- a/templates/users/public_profile.html
+++ b/templates/users/public_profile.html
@@ -5,7 +5,19 @@
 {% block 'title' %}<title>{{userID}} Profile</title>{% endblock 'title' %}
 {% block 'content' %}
 
-
+<div class="sort-by-dropdown">
+    <div id="sbw-wrap-d">
+        <div class='sbw-btn-d' id="sbw-overview">
+            Overview
+        </div>
+        <div class='sbw-btn-d' id="sbw-posts">
+            Posts
+        </div>
+        <div class='sbw-btn-d' id="sbw-comments">
+            Comments
+        </div>
+    </div>
+</div>
 
 <div class="main-wrap">
     <div class="content-wrap">
