--- a/templates/threads/create_post.html
+++ b/templates/threads/create_post.html
@@ -120,20 +120,26 @@
                 </div>
                 <div class="create-text-wrap">
                     <div class="create-text-options">
-                        <img src="{% static 'images/bold.png' %}" alt="" srcset="" class="create-text-options-img">
-                        <img src="{% static 'images/italic.png' %}" alt="" srcset="" class="create-text-options-img">
-                        <img src="{% static 'images/addurlsmall.png' %}" alt="" srcset=""
-                            class="create-text-options-img">
-                        <img src="{% static 'images/strikethrough.png' %}" alt="" srcset=""
-                            class="create-text-options-img">
-                        <img src="{% static 'images/spoiler.png' %}" alt="" srcset="" class="create-text-options-img">
-                        <img src="{% static 'images/bulletlist.png' %}" alt="" srcset=""
-                            class="create-text-options-img">
-                        <img src="{% static 'images/numlist.png' %}" alt="" srcset="" class="create-text-options-img">
-                        <img src="{% static 'images/quote.png' %}" alt="" srcset="" class="create-text-options-img">
-                    </div>
-                    <div class="comment_input-wrap">
-                        <textarea name="text" id="comment_input" cols="30" rows="10" placeholder='Text'></textarea>
+                        <div class="ct-wrap-img">
+                            <img src="{% static 'images/bold.png' %}" alt="" srcset="" class="create-text-options-img">
+                            <img src="{% static 'images/italic.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/addurlsmall.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/strikethrough.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/spoiler.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/bulletlist.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/numlist.png' %}" alt="" srcset=""
+                                class="create-text-options-img">
+                            <img src="{% static 'images/quote.png' %}" alt="" srcset="" class="create-text-options-img">
+                        </div>
+                        <div class="comment_input-wrap">
+                            <textarea name="text" id="comment_input" cols="30" rows="10" placeholder='Text'
+                                required></textarea>
+                        </div>
                     </div>
                 </div>
                 <div class="create-button-flair">
