--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -180,6 +180,7 @@ p {
     border-radius: 4px;
     border: 1px solid rgb(186, 184, 184);
     background-color: rgb(84, 82, 81);
+    align-items: center;
 }
 
 .create-choices {
@@ -233,9 +234,9 @@ p {
 .comment_input_title {
     background-color: rgb(136, 133, 131);
     border: 1px solid rgb(186, 184, 184);
-    width: 95%;
+    width: 93%;
     height: 40px;
-    padding: 0;  
+    padding: 0 1%;  
 }
 
 #char-count {
@@ -249,24 +250,31 @@ p {
     flex-direction: column;
     align-items: center;
     min-height: 175px;
-    width: 100%;
+    width: 95%;
     height: fit-content;
-    border-bottom: 1px solid rgb(186, 184, 184);
-    background-color: rgb(84, 82, 81);
     justify-content: center;
     padding-top: 15px;
-
+    
 }
 
 .create-text-options {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     border: 1px solid rgb(186, 184, 184);
-    border-bottom: none;
+    background-color: rgb(84, 82, 81);
+}
+
+.ct-wrap-img {
+    display: flex;
+    border-bottom: 1px solid rgb(186, 184, 184);
     background-color: rgb(136, 133, 131);
     height: 40px;
     justify-content: flex-start;
     align-items: center;
-    width: 95%;
+    width: 100%;
 }
 
 .create-text-options-img {
@@ -281,7 +289,18 @@ p {
 .button-wrap {
     display: flex;
     width: 100%;
+    background-color: rgb(136, 133, 131);
+    border-top: 1px solid rgb(186, 184, 184);
+    height: 35px;
+    justify-content: flex-end;
+}
 
+.submit-btn {
+    border: none;
+    border-radius: 15px;
+    padding: 0 15px;
+    margin: 3px;
+    font-weight: 700;
 }
 
 .comment-post{
